# oxido

./: .gitignore  Cargo.toml  README.md  bitbucket-pipelines.yml
actix/: Cargo.toml
actix/src/: main.rs
actix/static/: index.html
amethyst-sprite-animation/config/: display.ron
amethyst-sprite-animation/src/: main.rs
amethyst_boing/: Cargo.toml
amethyst_boing/src/: audio.rs  main.rs  pong.rs
amethyst_boing/src/systems/: bounce.rs  move_balls.rs  winner.rs
amethyst_pong/: Cargo.toml
amethyst_pong/src/: main.rs
amethyst_pong/src/systems/: mod.rs  paddle.rs
amethyst_sprite_animation/: Cargo.toml
amethyst_sprite_animation/config/: bindings.ron
amethyst_sprite_animation/src/: main.rs  pong.rs
amethyst_sprite_animation/src/systems/: paddle.rs
axum/: .gitignore  Cargo.toml  README.md
axum/migrations/: 20220117084043_initial.sql
axum/src/: main.rs
axum/src/entity/: users.rs
bevy_basic/: Cargo.toml
bevy_basic/src/: main.rs
bevy_basic_gabe/: Cargo.toml
bevy_basic_gabe/src/: main.rs
bevy_pong/: Cargo.toml
bevy_pong/src/: fps.rs  main.rs
boardgamegeek-cli/: Cargo.toml
canvas/: Cargo.toml  README.md  index.html  index.js  worker.js
canvas/src/: lib.rs
chip8/src/: main.rs
crates/boardgamegeek-cli/: .gitignore  Cargo.toml  README.md
crates/boardgamegeek-cli/src/: lib.rs  main.rs
crates/db_password/: Cargo.toml  README.md
crates/db_password/src/: main.rs
crates/guessing_game/: Cargo.toml
crates/guessing_game/src/: main.rs
crates/minigrep/: Cargo.toml
crates/minigrep/src/: lib.rs  main.rs
crates/spurilo/: Cargo.toml
crates/spurilo/src/: lib.rs  main.rs
db_password/: .env  Cargo.toml
db_password/src/: main.rs
druid_gui/: Cargo.toml
druid_gui/src/: main.rs
game-of-life/: Cargo.toml  README.md  index.html
game-of-life/src/: lib.rs
game_of_life/: Cargo.toml  README.md  index.html
game_of_life/src/: lib.rs  utils.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_rectangle/: Cargo.toml
hello_rectangle/src/: main.rs
minigrep/: Cargo.toml  README.md
minigrep/src/: lib.rs  main.rs
simple-web/: Cargo.toml  README.md
simple-web/src/: lib.rs
simple_wasm/: Cargo.toml  README.md  python.py  worker.js
simple_wasm/javascript/: index.html  worker.js
simple_wasm/src/: lib.rs
simple_wasm_bindgen/: Cargo.toml  index.html  worker.js
simple_wasm_bindgen/src/: lib.rs
simple_wasm_wasi/: README.md  browser.html
simple_web/: Cargo.toml  README.md  index.html  worker.js
simple_worker/: README.md  package.json
simple_worker/src/: lib.rs  worker.js
wasm/: .gitignore  .proxyrc.js  README.md  package.json  pnpm-lock.yaml
wasm/crates/sum/src/: lib.rs
wasm/crates/wasm/: Cargo.toml
wasm_bindgen/: Cargo.toml  README.md  index.html  script.js
wasm_bindgen/src/: lib.rs
web/actix/: Cargo.toml
web/actix/src/: main.rs
web/seed/: Cargo.toml  Makefile  Makefile.toml  index.html
web/seed/src/: app.rs  lib.rs
web/simple_web/: Makefile  README.md  index.html
web/simple_web/src/: lib.rs
web/simple_worker/: index.html  rollup.config.js
web/yew/: Cargo.toml
yew/: index.html
yew-app/: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
yew-app/src/: main.rs
yew-app/src/components/: adder.rs
