[package]
name = "actix-experiment"
version = "0.1.0"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-rt = "1.1.1"
actix-web = "3.2.0"
actix-web-actors = "3.0.0"
env_logger = "0.8.2"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }