[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
axum = "0.4.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
