[package]
name = "db_password"
version = "0.1.0"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.0"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
ring = "0.16.15"
serde = {version = "1.0.117", features = ["derive"] }