[package]
name = "minigrep"
version = "0.1.0"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
console = "0.14.0"
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "s"
