[package]
name = "minigrep"
version = "0.1.0"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
description = "The toolbox for searching in files"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
console = "0.15.0"
regex = "1.5.4"
