[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.19.3"
stylist = { version = "0.10.0", features = ["yew_integration"] }
