[package]
name = "seed"
version = "0.1.0"
description = "Seed"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
seed = "0.7"
